--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -262,8 +262,8 @@
       <span class="close">&times;</span>
 
       <div class="game-rules">
- <h3>GAME OBJECTIVE</h3>
-  <p>Win the game by being the last player able to make a legal move.</p>
+ <h4>GAME OBJECTIVE</h4>
+  <p><strong>Collaspsi</strong> is an abstract strategy maze game for two players.  As players move around the grid, the card they move from collapses, causing the grid to slowly close in on itself.  Use portals and cave-ins to your advantage. Trap your opponent and be the last player able to make a legal move to win the game.</p>
 
   <h4>PLAYERS</h4>
   <p>2 players</p>
