--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -263,7 +263,7 @@
 
       <div class="game-rules">
  <h4>GAME OBJECTIVE</h4>
-  <p><strong>Collaspsi</strong> is an abstract strategy maze game for two players.  As players move around the grid, the card they move from collapses, causing the grid to slowly close in on itself.  Use portals and cave-ins to your advantage. Trap your opponent and be the last player able to make a legal move to win the game.</p>
+  <p><strong>Collapsi</strong> is an abstract strategy maze game for two players.  As players move around the grid, the card they move from collapses, causing the grid to slowly close in on itself.  Use portals and cave-ins to your advantage. Trap your opponent and be the last player able to make a legal move to win the game.</p>
 
   <h4>PLAYERS</h4>
   <p>2 players</p>
